--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,39 @@
-body, html {
+
+
+* {
   margin: 0;
-  padding: 0;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #f0f0f0, #e0e0e0);
-  overflow: hidden;
+  background-color: black;
+  color: white;
+  font-family: 'Lucida Sans', Geneva, Verdana, sans-serif;
 }
 
-#loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-image: url('https://blob.sololearn.com/avatars/f3b7b682-514e-4775-b5d8-3b5a119c37df.jpg');
-  background-size: cover;
-  background-position: center;
-  animation: spin 3s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-iframe#wordgus-frame {
-  position: fixed;
-  top: 0;
-  left: 0;
+.fireworks {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#center {
+  width: 100%;
+  height: 250px;
+  border-radius: 5px;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(5px);
+}
+
+#center h1 {
+  text-align: center;
+  padding-top: 90px;
+  background-color: transparent;
+}
+
+button {
+  width: auto;
+  height: 30px;
   border: none;
+  background-color: wheat;
 }
